# virtual_matter_bridge

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
docs/: W100_MQTT_INTEGRATION.md  icd_checkin.md
src/: commissioning.rs  config.rs  error.rs  instance_lock.rs  lib.rs  main.rs
src/clusters/: camera_av_stream_mgmt.rs  chime.rs  mod.rs  webrtc_transport_provider.rs
src/device/: mod.rs  video_doorbell.rs
src/input/: mod.rs
src/input/camera/: input.rs  mod.rs  rtsp_client.rs  webrtc_bridge.rs
src/input/mqtt/: client.rs  integration.rs  mod.rs  w100.rs
src/input/simulation/: mod.rs  sensors.rs
src/input/udp/: mod.rs
src/inputs/: camera.rs  mod.rs
src/matter/: dev_att.rs  device_info.rs  device_types.rs  handler_bridge.rs  icd.rs  logging_udp.rs  mdns.rs  mod.rs  netif.rs  stack.rs  subscription_persistence.rs  virtual_device.rs
src/matter/clusters/: boolean_state.rs  bridged_device_basic_info.rs  camera_av_stream_mgmt.rs  camera_av_stream_mgmt_cluster.rs  chime.rs  generic_switch.rs  icd_mgmt.rs  mod.rs  occupancy_sensing.rs  relative_humidity.rs  software_diag.rs  temperature_measurement.rs  time_sync.rs  webrtc_transport_provider.rs
src/matter/controls/: mod.rs
src/matter/endpoints/: handler.rs  mod.rs
src/matter/endpoints/controls/: device_switch.rs  light_switch.rs  mod.rs  on_off_hooks.rs  switch.rs  switch_hooks.rs
src/matter/endpoints/controls/helpers/: binary_switch_helper.rs  mod.rs  switch_helper.rs
src/matter/endpoints/endpoints_helpers/: mod.rs  notifier.rs  traits.rs
src/matter/endpoints/sensors/: contact_sensor.rs  mod.rs  occupancy_sensor.rs
src/matter/endpoints/sensors/helpers/: binary_sensor_helper.rs  mod.rs
src/matter/events/: data.rs  mod.rs  path.rs
src/matter/sensors/: contact_sensor.rs  mod.rs  occupancy_sensor.rs
src/matter/sensors/helpers/: binary_sensor.rs  mod.rs  notifier.rs
src/rtsp/: mod.rs  webrtc_bridge.rs
src/sensors/: binary_sensor.rs  boolean_sensor.rs  contact_sensor.rs  door_sensor.rs  mod.rs  occupancy_sensor.rs
