[package]
name = "virtual-matter-bridge"
version = "0.1.0"
edition = "2024"
description = "A virtual Matter bridge for exposing RTSP cameras as Matter video doorbells"
authors = ["Tim Lisemer"]
license = "MIT"

[dependencies]
# Matter protocol (use git for latest features, crates.io version is outdated)
rs-matter = { git = "https://github.com/project-chip/rs-matter.git", branch = "main" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebRTC for video streaming
webrtc = "0.12"

# RTSP client for camera feeds
retina = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures-util = "0.3"
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random generation (for session IDs, etc.)
rand = "0.8"

# UUID generation
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "virtual-matter-bridge"
path = "src/main.rs"
