[package]
name = "virtual-matter-bridge"
version = "0.1.0"
edition = "2024"
description = "A virtual Matter bridge for exposing various devices to Matter controllers"
authors = ["Tim Lisemer"]
license = "MIT"

[dependencies]
# Matter protocol (use git for latest features, crates.io version is outdated)
# Features: std (stdlib support), os (OS-level features), zbus (D-Bus mDNS via Avahi on Linux), async-io (async runtime)
rs-matter = { git = "https://github.com/project-chip/rs-matter.git", branch = "main", features = ["std", "os", "zbus", "async-io"] }

# Embassy async utilities for Matter stack
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = { version = "0.5", features = ["std"] }
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
static_cell = "2"

# Async I/O for Matter transport
async-io = "2"
futures-lite = "2"
socket2 = "0.5"

# Unix network interface detection
nix = { version = "0.29", features = ["net"] }

# Hostname for mDNS
gethostname = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebRTC for video streaming
webrtc = "0.12"

# RTSP client for camera feeds
retina = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures-util = "0.3"
async-trait = "0.1"

# WebSocket client for dev tooling
tokio-tungstenite = "0.26"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Synchronization primitives (for Matter handler compatibility)
parking_lot = "0.12"

# Enum derive macros (for Matter cluster enums)
strum = { version = "0.26", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random generation (for session IDs, etc.)
rand = "0.8"

# Platform-specific directories (for config/data paths)
dirs = "5"

# UUID generation
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "virtual-matter-bridge"
path = "src/main.rs"

[[bin]]
name = "dev-commission"
path = "src/bin/dev-commission.rs"
