[package]
name = "virtual-matter-bridge"
version = "0.1.0"
edition = "2024"
description = "A virtual Matter bridge for exposing various devices to Matter controllers"
authors = ["Tim Lisemer"]
license = "MIT"

[dependencies]
# Matter protocol (use git for latest features, crates.io version is outdated)
# Features: std (stdlib support), os (OS-level features), zbus (D-Bus mDNS via Avahi on Linux), async-io (async runtime)
rs-matter = { path = "../rs-matter/rs-matter", features = ["std", "os", "zbus", "async-io"] }
# rs-matter = { git = "https://github.com/timlisemer/rs-matter.git", branch = "main", features = ["std", "os", "zbus", "async-io"] }

# Heapless containers (for Matter event buffers, must match rs-matter version)
heapless = "0.8"

# Embassy async utilities for Matter stack
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = { version = "0.5", features = ["std"] }
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
static_cell = "2"

# Async I/O for Matter transport
async-io = "2"
futures-lite = "2"
socket2 = "0.5"

# Unix network interface detection
nix = { version = "0.29", features = ["net"] }

# Hostname for mDNS
gethostname = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebRTC for video streaming
webrtc = "0.12"

# RTSP client for camera feeds
retina = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures-util = "0.3"
async-trait = "0.1"

# MQTT client for zigbee2mqtt integration
rumqttc = "0.24"

# WebSocket client for dev tooling
tokio-tungstenite = "0.26"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Synchronization primitives (for Matter handler compatibility)
parking_lot = "0.12"

# Enum derive macros (for Matter cluster enums)
strum = { version = "0.26", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random generation (for session IDs, etc.)
rand = "0.8"

# Platform-specific directories (for config/data paths)
dirs = "5"

# UUID generation
uuid = { version = "1", features = ["v4"] }

[lib]
name = "virtual_matter_bridge"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "virtual-matter-bridge"
path = "src/main.rs"

[[bin]]
name = "dev-commission"
path = "src/bin/dev-commission.rs"

[[bin]]
name = "mqtt-test"
path = "src/bin/mqtt-test.rs"
